# cmake_demo

./: .gitignore  CMakeLists.txt  README.md  auto_build.sh
cmake/: build.cmake  compiler_config.cmake  toolchain.cmake  x86.cmake
example/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
